# AI_Architecture_Explainer

./: .env.example  .env.staging.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  MERGE_GUIDE.md  README.md  docker-compose.yml
Tools/: README.md  backend_bridge.py  main.py  pyproject.toml  service.py
Tools/adapters/: base.py  registry.py  ruff.py  severity_map.py
Tools/api/routes/: review.py
Tools/engine/: anti_gaming.py  dedupe.py  depth.py  registry.py
Tools/exports/: json_exporter.py  markdown_exporter.py
Tools/facts/: models.py
Tools/facts/collectors/: manifests.py  metrics.py
Tools/integration/: Dockerfile.backend  Dockerfile_additions.txt  IMPLEMENTATION_CHECKLIST.md  WIRING_CHECKLIST.md  alembic_migration.py  backend_model.py  backend_routes.py
Tools/integration/scripts/: inspect_review_row.py  local_smoke_test.py  staging_test.py  verify_environment.py
Tools/llm/: contract.py  summaries.py  trace.py
Tools/models/: evidence.py
Tools/rules/architecture/: entrypoint_concentration.py  hollow_test_suite.py  route_db_coupling.py
Tools/rules/common/: env_example_missing.py  formatter_missing.py  large_files.py  license_missing.py  lint_density.py  no_deployment_config.py  readme_missing.py  security_density.py  tests_present_but_no_ci.py
Tools/rules/docker/: dockerfile_root.py
Tools/rules/python/: no_structured_logging.py  no_type_signal.py  pytest_missing.py
Tools/scoring/: depth_weight.py  engine.py
Tools/tests/golden/: calibration_notes.md  runner.py  test_golden_reviews.py  test_repo_ordering.py
Tools/tests/trust_audit/: CALIBRATION_LOG.md  runner.py
Tools/tests/unit/: test_anti_gaming.py  test_anti_gaming_block.py  test_anti_hallucination.py  test_bandit_adapter.py  test_coverage_builder.py  test_depth.py  test_depth_weight.py  test_fastapi_main_too_large.py  test_interpretation.py  test_ops_calibration.py  test_quality_expansion.py  test_readme_missing.py  test_repo_url.py  test_ruff_adapter.py  test_score_engine.py  test_secret_patterns.py  test_service_contract.py  test_severity_map.py  test_tool_aware_rules.py  test_trace.py
Tools/utils/: repo_url.py
backend/: .dockerignore  .env.example  Dockerfile  MIGRATION_0024_GUIDE.md  Procfile  baseline.json  current.json  docker-entrypoint.sh  pyproject.toml  quick-migrate.sh  railway-start.sh  railway.toml  run-migration.sh  scout_benchmark.py
backend/alembic/: env.py
backend/alembic/unreleased/: 0010_three_tier_tables.py
backend/alembic/versions/: 0002_add_review_tables.py  0011_add_intelligence_tables.py  0012_create_atlas_legacy_tables.py  0013_add_review_job_commit.py  0014_add_agent_runs.py  0015_add_llm_usage.py  0016_add_review_job_pr_fields.py  0017_add_share_slugs.py  0018_add_cached_result_id.py  0019_add_production_score_metadata.py  0020_add_worker_heartbeats.py  0021_add_atlas_diagnostic_tabs.py  0022_fix_composite_label_length.py  0023_add_queue_claim_indexes.py  0024_add_devcontainer_audit_embeddings.py  0024b_add_devcontainer_audit_embeddings_sqlite.py  046b2f30983d_initial_schema.py
backend/app/: main.py  worker.py  worker_health.py
backend/app/api/: deps.py  routes_analysis.py  routes_health.py  routes_history.py  routes_map.py  routes_ops.py  routes_results.py  routes_review.py  routes_share.py  routes_webhook.py  scout.py
backend/app/db/: session.py
backend/tests/: conftest.py  test_framework_detector.py  test_github_url.py  test_manifest_parser.py  test_scout_heuristics.py  test_scout_llm_parsing.py
(+306 files in other folders)
