[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "repoblueprint-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "pyyaml>=6.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"scout_benchmark.py" = ["E501", "E701"]
# Pre-existing reviewer rules — long evidence strings and str-Enum patterns are intentional
"app/services/reviewer/**/*.py" = ["E501", "UP042", "E741", "E701", "E702", "F841", "F601", "I001"]
"app/models/review.py" = ["I001", "E402"]
# New analysis layer — long ORM column definitions and analyzer evidence strings
"app/models/analysis.py" = ["E501"]
"app/services/analyzers/*.py" = ["E501", "UP042"]
"app/services/contracts/*.py" = ["E501", "UP042"]
"app/services/policy/tier_policy.py" = ["UP042"]
"app/api/routes/public_analyze.py" = ["E501"]
"tests/unit/*.py" = ["E501", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
